--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.3.0",
